UserChart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-service
  labels:
    app: user-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:

      - name: user-service

        image: mousama/user-service:latest
       

        ports:

        - name: http
          containerPort: 8000

        - name: grpc
          containerPort: 50051
