UserChart/templates/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: user-service

spec:

  selector:
    app: user-service

  type: ClusterIP

  ports:

  - name: http
    port: 8000
    targetPort: 8000

  - name: grpc
    port: 50051
    targetPort: 50051
