UserChart/templates/isti-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: coffee-shop-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "coffee-shop.local"
