UserChart/templates/user-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: user-service
spec:
  hosts:
    - "coffee-shop.local"
  gateways:
    - coffee-shop-gateway
  http:
      - route:
        - destination:
            host: user-service
            port:
              number: 8000
